--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div class="stickyMenu">
       <div class="stickyMenuInside">
+        <div class="stickyYellowStripe"></div>
         <div class="BEYOUTY"></div>
         <div class="stickyTodaysSpecial">
           <p>TODAY'S OFFER</p>
@@ -24,13 +25,45 @@
         </div>
         <div class="stickyMenuNav">
           <a href="#">SHOP</a>
-          <a href="#">ABOUT US</a>
+          <div class="megaMenuHoverBox">
+            <a href="#">ABOUT US</a>
+            <div class="megaMenu">
+              <div class="mmImageFlexBox">
+                <div class="mmPicBox">
+                  <div class="mmPicOne mmpic"></div>
+                  <p>NAILS</p>
+                </div>
+                <div class="mmPicBox">
+                  <div class="mmPicTwo mmpic"></div>
+                  <p>LIPS</p>
+                </div>
+                <div class="mmPicBox">
+                  <div class="mmPicThree mmpic"></div>
+                  <p>EYES</p>
+                </div>
+                <div class="mmPicBox">
+                  <div class="mmPicFour mmpic"></div>
+                  <p>FACE</p>
+                </div>
+                <div class="mmPicBox">
+                  <div class="mmPicFive mmpic"></div>
+                  <p>SKIN</p>
+                </div>
+              </div>
+              <p class="mmFreeShiping">Free shipping with order OVER <span>$49.95</span> </p>
+              <div class="mmTodaysSpecial">
+                <p>CHECK TODAYS SPECIAL</p>
+              </div>
+              <div class="mmPurpleStripe"></div>
+            </div>
+          </div>
           <a href="#">CONTACT</a>
         </div>
         <div class="stickyLogin">
           <p>Login</p>
           <div class="loginPng"></div>
         </div>
+
         <div class="burgerMenuMobile"><!-- burger display only for mobile -->
           <div class=""></div>
           <div class=""></div>
@@ -48,7 +81,7 @@
       <img class="eyeBrush" src="assets/img/png/eyeBrush.png" alt="picture of dior">
     </main>
 
-    <div class="bridalSection">
+    <!-- <div class="bridalSection">
       <h4>WHAT <span>WE DO</span> </h4>
       <div class="bridalImageOrangeBox">
         <div class="narrowDivBox">
@@ -65,10 +98,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="whatWeSellBnd">
-      <h4>WHAT <span>WE SELL</span> </h4>
+      <p>Your satisfaction is our command.</p>
+      <p>BeautyPro offers a 30-day money back guarantee</p>
+      <h4>SHOP THE <span>LATEST</span> </h4>
     </div>
     <div class="whatWeDo">
       <div class="whatWeDoOne whatWeDoJS">
@@ -104,7 +139,30 @@
               </p>
         </div>
       </div>
+      <div class="whatWeDoFour whatWeDoJS">
+        <div class="whatWeDoTextBox">
+          <p class="fontFam">What we Do</p>
+          <p>Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud
+              </p>
+        </div>
+      </div>
+      <div class="whatWeDoFive whatWeDoJS">
+        <div class="whatWeDoTextBox">
+          <p class="fontFam">What we Do</p>
+          <p>Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud
+              </p>
+        </div>
+      </div>
     </div>
+
 
     <section class="specialOfferSection">
       <h4>SPECIAL <span>OFFER</span> </h4>
