Mega ON SHOP NOT ABOUT US

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <div class="cart"></div>
         </div>
         <div class="stickyMenuNav">
-          <a href="#">SHOP</a>
+          <!-- <a href="#">SHOP</a> -->
           <div class="megaMenuHoverBox">
-            <a href="#">ABOUT US</a>
+            <a href="#">SHOP</a>
             <div class="megaMenu">
               <div class="mmImageFlexBox">
                 <div class="mmPicBox">
@@ -57,6 +57,7 @@
               <div class="mmPurpleStripe"></div>
             </div>
           </div>
+          <a href="#">ABOUT US</a>
           <a href="#">CONTACT</a>
         </div>
         <div class="stickyLogin">
