aded all the shit

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <div class="stickyMenu">
       <div class="stickyMenuInside">
         <div class="stickyYellowStripe"></div>
+        <div class="searchIcon">
+          <p>&#128269;</p>
+        </div>
         <div class="BEYOUTY"></div>
         <div class="stickyTodaysSpecial">
-          <p>TODAY'S OFFER</p>
+          <p>TODAY'S SPECIAL</p>
         </div>
         <div class="carBox">
           <p>3</p>
@@ -59,12 +62,12 @@
           </div>
           <a href="#">ABOUT US</a>
           <a href="#">CONTACT</a>
+          <a href="#">BLOG</a>
         </div>
         <div class="stickyLogin">
           <p>Login</p>
           <div class="loginPng"></div>
         </div>
-
         <div class="burgerMenuMobile"><!-- burger display only for mobile -->
           <div class=""></div>
           <div class=""></div>
@@ -73,7 +76,42 @@
       </div>
     </div>
     <!-- sticky end -->
+    <!--blackvoerlay  -->
+    <div class="blackOverlay">
+      <div class="specialSales specialSalesBlackLayer">
+        <div class="blackLayerInside"></div>
+        <div class="advertBox adBoxBlackOverlay">
+          <div class="blackDivOne blackDivOneLayer"></div>
+          <div class="blackDivTwo blackDivTwoLayer"></div>
+          <div class="pinkBag yellowBag"></div>
+          <p>NOTIFY ME OF SPECIAL SALES</p>
+          <div class="advertBoxButton adlayer">
+            <input type="text" name="" value="" placeholder="My email">
+            <div class="littleArrow littleArrowLayer"><span class="littleArroHtml littleArroHtmllayer">&#x27A4;</span> </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <!--blackvoerlay  -->
+
     <main>
+      <div class="mainBgDiv">
+        <div class="narrowMainBgDiv"></div>
+      </div>
+
+      <div class="subscribeArrow">
+          <p>&#8250;</p>
+      </div>
+      <div class="empowerWomanBox">
+        <p>Empowering Women</p>
+        <p>To reveal their natural beauty</p>
+      </div>
+      <div class="itemsOnSale">
+        <p>Over 53 new items on sale...</p>
+      </div>
+      <button class="shopNow" type="button" name="button">Shop Now</button>
+      <div class="lineDownAnim"></div>
       <img class="girl" src="assets/img/png/girl.png" alt="picture of dior">
       <img class="dior" src="assets/img/png/dior.png" alt="picture of dior">
       <img class="crayon" src="assets/img/png/crayon.png" alt="picture of dior">
