--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="stickyMenuNav">
           <!-- <a href="#">SHOP</a> -->
           <div class="megaMenuHoverBox">
-            <a href="#">SHOP</a>
+            <a href="#" class='shop'>SHOP</a>
             <div class="megaMenu">
               <div class="mmImageFlexBox">
                 <div class="mmPicBox">
@@ -115,7 +115,8 @@
       <button class="shopNow" type="button" name="button">Shop Now</button>
       <div class="lineDownAnim"></div>
       <img class="girl" src="assets/img/png/girl.png" alt="picture of dior">
-      <img class="dior" src="assets/img/png/dior.png" alt="picture of dior">
+      <img class="smoke" src="assets/img/png/smoke.png" alt="picture of dior">
+      <img class="dior" src="assets/img/png/diorT.png" alt="picture of dior">
       <img class="crayon" src="assets/img/png/crayon.png" alt="picture of dior">
       <img class="crayonShadow" src="assets/img/png/crayonShadow.png" alt="picture of dior">
       <img class="browBrush" src="assets/img/png/browBrush.png" alt="eyebrow brush">
