--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="lineDownAnim"></div>
       <img class="girl" src="assets/img/png/girl.png" alt="picture of dior">
       <img class="smoke" src="assets/img/png/smoke.png" alt="picture of dior">
-      <img class="dior" src="assets/img/png/diorT.png" alt="picture of dior">
+      <img class="dior" src="assets/img/png/diorY.png" alt="picture of dior">
       <img class="crayon" src="assets/img/png/crayon.png" alt="picture of dior">
       <img class="crayonShadow" src="assets/img/png/crayonShadow.png" alt="picture of dior">
       <img class="browBrush" src="assets/img/png/browBrush.png" alt="eyebrow brush">
