--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <div class="mmPicFour mmpic"></div>
                   <p>FACE</p>
                 </div>
-                <div class="mmPicBox">
+                <div class="mmPicBox mmPicBoxMobFive">
                   <div class="mmPicFive mmpic"></div>
                   <p>SKIN</p>
                 </div>
@@ -159,7 +159,7 @@
 
     <div class="whatWeSellBnd">
       <p>Your satisfaction is our command.</p>
-      <p>BeautyPro offers a 30-day money back guarantee</p>
+      <p>BeYouTy offers a 30-day money back guarantee</p>
       <h4>SHOP THE <span>LATEST</span> </h4>
     </div>
     <div class="whatWeDo">
