shoping card functionlity

--- a/index.html
+++ b/index.html
@@ -91,8 +91,72 @@
         </div>
       </div>
     </div>
-    <!--blackvoerlay  -->
+    <!--blackvoerlay end -->
+    <!-- shoping checkout -->
+    <div class="shopingCheckout">
+      <div class="myCartContainer">
+        <div class="cartCheckout"></div>
+        <p class="myCart">My Cart</p>
+      </div>
+      <p  class="checkoutX">&#x2716;</p>
 
+      <div class="item">
+        <img src="assets/img/png/eyeBrush.png" alt="">&nbsp
+        <p>product 1</p>
+        <div class="itemPriceInput">
+          <p>10$</p>
+          <p class="inpt">1</p>
+          <p class="plus">✚</p>
+          <p class="minus">&#x268A;</p>
+        </div>
+        <div class="discard">
+          <p>&#x2716;</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="assets/img/png/eyeBrush.png" alt="">&nbsp
+        <p>product 1</p>
+        <div class="itemPriceInput">
+          <p>10$</p>
+          <p class="inpt">1</p>
+          <p class="plus">✚</p>
+          <p class="minus">&#x268A;</p>
+        </div>
+        <div class="discard">
+          <p>&#x2716;</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="assets/img/png/eyeBrush.png" alt="">&nbsp
+        <p>product 1</p>
+        <div class="itemPriceInput">
+          <p>10$</p>
+          <p class="inpt">1</p>
+          <p class="plus">✚</p>
+          <p class="minus">&#x268A;</p>
+        </div>
+        <div class="discard">
+          <p>&#x2716;</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="assets/img/png/eyeBrush.png" alt="">&nbsp
+        <p>product 1</p>
+        <div class="itemPriceInput">
+          <p>10$</p>
+          <p class="inpt">1</p>
+          <p class="plus">✚</p>
+          <p class="minus">&#x268A;</p>
+        </div>
+        <div class="discard">
+          <p>&#x2716;</p>
+        </div>
+      </div>
+    </div>
+    <!-- shoping checkout end-->
     <main>
       <div class="mainBgDiv">
         <div class="narrowMainBgDiv"></div>
