--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <div class="whatWeSellBnd">
       <p>Your satisfaction is our command.</p>
       <p>BeYouTy offers a 30-day money back guarantee</p>
-      <h4>SHOP THE <span>LATEST</span> </h4>
+      <h4 class="whatWeSellHfour">SHOP THE <span>LATEST</span> </h4>
     </div>
     <div class="whatWeDo">
       <div class="whatWeDoOne whatWeDoJS">
