--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
         <div class="gridBox">
           <div class="olay gridPicturesJS">
-            <img src="assets/img/six-image-grid/olay.jpg" alt="olay">
+            <img class="gridBoxImage" src="assets/img/six-image-grid/olay.jpg" alt="olay">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -344,7 +344,7 @@
             </div>
           </div>
           <div class="sede gridPicturesJS">
-            <img src="assets/img/six-image-grid/sede.jpg" alt="sede">
+            <img class="gridBoxImage" src="assets/img/six-image-grid/sede.jpg" alt="sede">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -359,7 +359,7 @@
             </div>
           </div>
           <div class="gucci gridPicturesJS">
-            <img src="assets/img/six-image-grid/gucci.jpg" alt="gucci">
+            <img class="gridBoxImage" src="assets/img/six-image-grid/gucci.jpg" alt="gucci">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -374,7 +374,7 @@
             </div>
           </div>
           <div class="cc gridPicturesJS">
-            <img src="assets/img/six-image-grid/cc.jpg" alt="cream">
+            <img class="gridBoxImage" src="assets/img/six-image-grid/cc.jpg" alt="cream">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -389,7 +389,7 @@
             </div>
           </div>
           <div class="parfume gridPicturesJS">
-            <img src="assets/img/six-image-grid/parfume.jpg" alt="parfume">
+            <img class="gridBoxImage" src="assets/img/six-image-grid/parfume.jpg" alt="parfume">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -404,7 +404,7 @@
             </div>
           </div>
           <div class="flower gridPicturesJS">
-            <img src="assets/img/six-image-grid/flower.jpg" alt="flower">
+            <img class="gridBoxImage" src="assets/img/six-image-grid/flower.jpg" alt="flower">
             <div class="price">
               <div class="priceNumbers">
                 <div class="redLine"></div>
@@ -462,7 +462,7 @@
       <!-- <h2>New Arrivals</h2> -->
       <div class="carWraper">
         <div class="leftImage">
-          <img src="assets/img/png/lipstick.png" alt="lipstick">
+          <img class="leftImageLipstick"  src="assets/img/png/lipstick.png" alt="lipstick">
         </div>
         <div class="leftCarArrowBox" id="carOneLeftCarArrowBox">
           <div class="arrow"></div>
