--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title></title>
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width">
-    <link href="https://fonts.googleapis.com/css?family=Oranienbaum" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Oranienbaum" rel="stylesheet" media="none" onload="if(media!='all')media='all'"  async>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'"  async>
   </head>
   <body>
     <!-- sticky start -->
