--- a/index.html
+++ b/index.html
@@ -824,6 +824,12 @@
       <p><span>&#169;</span> 2018 NailsPro INC &nbsp; Terms of Service &nbsp; Privacy Policies</p>
     </footer>
 
+    <a href="#toTop">
+      <div class="arrowToTop" style="opacity: 0.31; pointer-events: auto;">
+        <p>&gt;</p>
+      </div>
+    </a>
+
 
     <script type="text/javascript" src="assets/js/app.js">
 
