--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Oranienbaum" rel="stylesheet" media="none" onload="if(media!='all')media='all'"  async>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'"  async>
   </head>
-  <body>
+  <body id="toTop">
     <!-- sticky start -->
-    <div class="stickyBackgroundLayer">
+    <div  class="stickyBackgroundLayer">
       <div class="stickyBgInLayer"></div>
     </div>
     <div class="stickyMenu">
